--- a/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
+++ b/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="PuppeteerSharp" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RockwellAutomation.Challenge.WebCronScrapping.InputPort\RockwellAutomation.Challenge.WebCronScrapping.InputPort.csproj" />
+    <ProjectReference Include="..\RockwellAutomation.Challenge.WebCronScrapping.OutputPort\RockwellAutomation.Challenge.WebCronScrapping.OutputPort.csproj" />
   </ItemGroup>
 
 </Project>
