--- a/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
+++ b/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="PuppeteerSharp" Version="13.0.2" />
+    <PackageReference Include="Quartz" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
