--- a/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
+++ b/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="PuppeteerSharp" Version="13.0.2" />
     <PackageReference Include="Quartz" Version="3.8.0" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.0" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
