--- a/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
+++ b/RockwellAutomation.Challenge.WebCronScrapping.Interactor/RockwellAutomation.Challenge.WebCronScrapping.Interactor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.20" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="PuppeteerSharp" Version="13.0.2" />
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RockwellAutomation.Challenge.WebCronScrapping.Entities\RockwellAutomation.Challenge.WebCronScrapping.Entities.csproj" />
     <ProjectReference Include="..\RockwellAutomation.Challenge.WebCronScrapping.InputPort\RockwellAutomation.Challenge.WebCronScrapping.InputPort.csproj" />
     <ProjectReference Include="..\RockwellAutomation.Challenge.WebCronScrapping.OutputPort\RockwellAutomation.Challenge.WebCronScrapping.OutputPort.csproj" />
   </ItemGroup>
